Bug 498357 - Elisa displaying incorrect or duplicate song names on shuffle
Summary: Elisa displaying incorrect or duplicate song names on shuffle
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-07 18:04 UTC by TSmort
Modified: 2025-01-21 21:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
playlist sidebar displaying incorrect and duplicate song names (63.82 KB, image/png)
2025-01-07 18:04 UTC, TSmort
Details

Note You need to log in before you can comment on or make changes to this bug.
Description TSmort 2025-01-07 18:04:16 UTC
Created attachment 177174 [details]
playlist sidebar displaying incorrect and duplicate song names

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY


STEPS TO REPRODUCE
1. Open a playlist in Elisa
2. Play playlist for a while (I'm not sure how long)
3. song names (and album names if the songs come from different albums) will be incorrect and there may be duplicates. If the songs come from different artists, the artist will be correct. If there is album art, it will also be correct.

OBSERVED RESULT
Song names are incorrect and there are multiple songs displayed with the same name

EXPECTED RESULT
Song names are the same as the song being played

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: arch linux
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1

ADDITIONAL INFORMATION
Comment 1 John Kizer 2025-01-13 19:45:03 UTC
Hi - I cannot reproduce this issue with Elisa 24.12.1 on Fedora KDE 41. Could you please check to see if the issue remains on the updated version?

Thanks!
Comment 2 TSmort 2025-01-14 12:54:14 UTC
(In reply to John Kizer from comment #1)
> Hi - I cannot reproduce this issue with Elisa 24.12.1 on Fedora KDE 41.
> Could you please check to see if the issue remains on the updated version?
> 
> Thanks!

I am also on 24.12.1 but the issue still persists: https://ibb.co/TWtvbgH
Comment 3 nick80835 2025-01-15 15:12:31 UTC
I can reproduce this consistently and have bisected it, it seems to start with this commit and reverting it restores normal behavior: https://invent.kde.org/multimedia/elisa/-/commit/c0754bde50db970abe67fb4580ac033f6da4ecfa

To consistently check for this, I open an album with track shuffle enabled and click play on it. Then I switch tracks while observing the playlist on the right, which will randomly change the names of tracks in the list to the names of other tracks in the list, creating duplicates.

Operating System: Arch Linux 
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.10.0
Qt Version: 6.8.1
Comment 4 Bug Janitor Service 2025-01-20 19:11:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/658
Comment 5 Jack Hill 2025-01-21 21:30:14 UTC
Git commit d1f682e731c19e916bbb290d56017b5d7330b492 by Jack Hill, on behalf of Pedro Nishiyama.
Committed on 21/01/2025 at 21:18.
Pushed by jackh into branch 'master'.

Update track data using the correct index

M  +6    -4    src/mediaplaylistproxymodel.cpp

https://invent.kde.org/multimedia/elisa/-/commit/d1f682e731c19e916bbb290d56017b5d7330b492