Update track data using the correct index

BUG: 498357